2003-06-06  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.5-cvs-b12

	* Applied a varaiation on Joan McGalliard's fix for custom fields,
	  which were broken if magic_quotes_gpc was enabled.

	* Fixed issue where PostNuke-embedded Gallery administrators
	  required admin rights over all of PostNuke. Now, admin
	  permissions can be restricted just to the Gallery module. (Bug
	  #590999)

2003-06-05  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b11

	* Try to detect where each program is located in backup_albums.php

2003-06-04  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.5-cvs-b10

	* Reworked user authentication in gallery_remote2.php to allow
	  using users from embedding CMS. Only tested with PostNuke
	  at the moment.

2003-06-03  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b9

	* Remove preg_* functions from search.php, in order to support
	  older versions of PHP.

2003-06-03  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.5-cvs-b8

	* Fixed problem in gallery_remote*.php which caused GR to no longer
	  be able to connect.

2003-05-29  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b7

        * Checked in by Joan, but changes are actually by Jesse Mullan.

        * fixed bug in backup_albums.php, so if zip file is found, no others
          are checked for.

        * default zip exe changed, and readfile replaces cat so that backup
          will work on a windows machine with zip installed.

        * note: paths for zip, find, tar etc should be in wizard by
          version 1.3.5

2003-06-02  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.5-cvs-b6

	* Add the \n and \r replacing code in slideshow_low.php too.

2003-06-02  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.5-cvs-b5

	* Replace \n and \r with spaces in the slideshow captions, as
	  these do cause issues with JavaScript.

2003-06-02  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.5-cvs-b4

	* Fix bug #672943, where searching for a string with special